# emg-rt

./: .CMakeLists.txt.swp  .clangd  .gitignore  CMakeLists.txt  README.md  repository_tree.txt
include/emg-rt/buffer/: .signal_ring_buffer.h.swp  acquisition_ring_buffer.h  signal_ring_buffer.h
include/emg-rt/config/: decomposition_config.h
include/emg-rt/control/: emg_to_motor.h
include/emg-rt/data_replay/: offline_emg_source.h
include/emg-rt/decomposition/: classify_discharges.h  get_discharge_t.h  get_pulse_train.h  is_local_max.h  islocalmax.h  online_decomposer.h
include/emg-rt/dsp/: demean.h  extend.h
include/emg-rt/profiling/: .timer.h.swp  timer.h
include/emg-rt/utils/: debug_views.h  formatting.h  types.h
src/: .main.cpp.swp  hello_world  main.cpp
src/buffer/: .signal_ring_buffer.cpp.swp  acquisition_ring_buffer.cpp  signal_ring_buffer.cpp
src/config/: .decomposition_config.cpp.swp  decomposition_config.cpp
src/control/: emg_to_motor.cpp
src/data_replay/: offline_emg_source.cpp
src/decomposition/: .get_pulse_train.cpp.swp  classify_discharges.cpp  decomposition.cpp  get_discharge_t.cpp  get_pulse_train.cpp  is_local_max.cpp  islocalmax.cpp  online_decomposer.cpp
src/dsp/: demean.cpp  extend.cpp
tests/: CMakeLists.txt  KNOWN_GAPS.md  README.md  test_config.cpp  test_decomposition.cpp  test_dsp.cpp  test_types.cpp
tests/buffer/: test_acquisition_ring_buffer.cpp  test_ring_matrix.cpp
tests/config/: test_load_online_decomposer.cpp
tests/decomposition/: test_classify_discharges.cpp  test_get_distime.cpp  test_get_pulse_train.cpp  test_incremental_is_local_max.cpp  test_is_local_max.cpp
tests/dsp/: test_demean.cpp  test_extend.cpp  test_incremental_extend.cpp
tests/integration/: test_synthetic_pipeline.cpp
tests/support/: matrix_helpers.h  temp_files.h
tests/utils/: test_ring_matrix.cpp
